<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/toolbar_contact"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_first_name_header"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Здесь будет имя"
                android:textSize="@dimen/main_text_size"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_bigger">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_last_name_header"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_second_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Здесь будет фамилия"
                android:textSize="@dimen/main_text_size"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_bigger">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_address_header"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Здесь будет адрес"
                android:textSize="@dimen/main_text_size"
                android:textStyle="normal"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_bigger">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_phone_number_header"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Здесь будет номер телефона"
                android:textSize="@dimen/main_text_size"
                android:textColor="@color/main_color"
                android:textStyle="bold|italic"
                android:layout_weight="3"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_back"
            android:textSize="@dimen/main_text_size"
            android:layout_marginTop="@dimen/margin_top_bigger"/>
    </LinearLayout>

</LinearLayout>